fixed section alignment

--- a/#source/scss/about.scss
+++ b/#source/scss/about.scss
@@ -1,5 +1,5 @@
 .about {
-  display: inline-block;
+  // display: inline-block;
   width: 100%;
   text-align: center;
 
@@ -16,7 +16,11 @@
   &__description {
     display: inline-block;
     text-align: center;
-    width: 594px;
+    width: 596px;
     height: 72px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4F4F4F;
+    margin: 2px;
   }
 }
