--- a/#source/scss/halls.scss
+++ b/#source/scss/halls.scss
@@ -1,4 +1,19 @@
 .halls {
+    padding: 0 0 0 96px;
+
+    &__heading {
+        .section__heading {
+            width: 72%;
+            margin-top: 96px;
+            font-family: "Merriweather", serif;
+            width: 100%;
+            display: inline-block;
+            font-size: 40px;
+            line-height: 52px;
+            color: #121212;
+    }
+    }
+
     &__item {
         display: inline-block;
     }
