--- a/#source/scss/sections.scss
+++ b/#source/scss/sections.scss
@@ -1,4 +1,8 @@
 .section {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+
     &__heading {
         display: inline-block;
     }
